--- a/learn-m365-pr/wwl/exchange-recipients/index.yml
+++ b/learn-m365-pr/wwl/exchange-recipients/index.yml
@@ -3,19 +3,20 @@ uid: learn.wwl.exchange-recipients
 metadata:
   title: Explore the different types of Exchange recipients
   description: "Explore the different types of Exchange recipients"
-  ms.date: 03/09/2022
+  ms.date: 05/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Explore the different types of Exchange recipients
-summary: Examines the different types of Exchange Server recipients, including mailboxes, Microsoft 365 groups, resources, and contacts, and analyzes how they differ from each other.
+summary: Examines the different types of Exchange Server recipients, including mailboxes, Microsoft 365 groups, resources, contacts, public folders, and analyzes how they differ from each other.
 abstract: |
   By the end of this module, you'll be able to:
   - Describe the different recipient objects in Exchange.
   - Examine how organizations use resource mailboxes.
   - Compare shared mailboxes to linked mailboxes.
   - Describe how recipients can be grouped together to improve collaboration.
+  - Examine how organization us public folders.
 prerequisites: |
   None
 iconUrl: /learn/achievements/1-exchange-recipients.svg
@@ -28,6 +29,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.exchange-recipients.introduction
 - learn.wwl.exchange-recipients.explore-recipient-types
@@ -35,6 +37,7 @@ units:
 - learn.wwl.exchange-recipients.explore-shared-mailboxes
 - learn.wwl.exchange-recipients.explore-linked-mailboxes
 - learn.wwl.exchange-recipients.explore-groups
+- learn.wwl.exchange-recipients.explore-public-folders
 - learn.wwl.exchange-recipients.knowledge-check
 - learn.wwl.exchange-recipients.summary
 badge:
