--- a/learn-m365-pr/wwl/manage-email-addresses-lists-resources/4-examine-address-book-policies.yml
+++ b/learn-m365-pr/wwl/manage-email-addresses-lists-resources/4-examine-address-book-policies.yml
@@ -4,7 +4,7 @@ title: Examine address book policies
 metadata:
   title: Examine address book policies
   description: "Examine address book policies"
-  ms.date: 03/09/2022
+  ms.date: 05/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "Customize the ABP settings"
       isCorrect: false
-      explanation: "This answer is incorrect. While you can optionally modify ABP settings once the ABP is configured, this isn't a required step. Try again."
+      explanation: "This answer is incorrect. While you can optionally modify ABP settings once the ABP is configured, this isn't a required step."
     - content: "Assign address lists to the ABP"
       isCorrect: false
-      explanation: "This answer is incorrect. This step actually occurs when you create the ABP. Since Holly has already created the ABP using the Exchange Management Shell, this step has already been completed. Try again."
+      explanation: "This answer is incorrect. This step actually occurs when you create the ABP. Since Holly has already created the ABP using the Exchange Management Shell, this step has already been completed."
     - content: "Assign the ABP to a mailbox user"
       isCorrect: true
       explanation: "This answer is correct. After turning on ABP routing and creating an ABP, the next step in the configuration process is to assign the ABP to a mailbox user (or to multiple mailbox users)."
