--- a/learn-m365-pr/wwl/manage-email-addresses-lists-resources/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-email-addresses-lists-resources/7-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 03/09/2022
+  ms.date: 05/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -24,29 +24,29 @@ quiz:
       explanation: "This answer is correct. Subcategories of address lists are known as hierarchical address lists."
     - content: "Nested address lists"
       isCorrect: false
-      explanation: "This answer is incorrect. Subcategories of address lists aren't known as nested address lists. Try again."
+      explanation: "This answer is incorrect. Subcategories of address lists aren't known as nested address lists."
     - content: "Segmented address lists"
       isCorrect: false
-      explanation: "This answer is incorrect. Subcategories of address lists aren't known as segmented address lists. Try again."
+      explanation: "This answer is incorrect. Subcategories of address lists aren't known as segmented address lists."
   - content: "There are two requirements for an Outlook client to use an offline address book. One of the requirements is that the client can't be connected to Exchange. What's the second requirement?"
     choices:
     - content: "The client must be assigned an address book policy"
       isCorrect: false
-      explanation: "This answer is incorrect. This action isn't the second requirement for an Outlook client to use an offline address book. Try again."
+      explanation: "This answer is incorrect. This action isn't the second requirement for an Outlook client to use an offline address book."
     - content: "The client must be configured in cached mode"
       isCorrect: true
       explanation: "This answer is correct. Offline address books (OABs) are downloadable copies of the address lists that are used by Outlook clients. To use an OAB, a client must be configured in cached mode, and it can't be connected to Exchange."
     - content: "The organization must turn on ABP routing in PowerShell"
       isCorrect: false
-      explanation: "This answer is incorrect. This action isn't the second requirement for an Outlook client to use an offline address book. Try again."
+      explanation: "This answer is incorrect. This action isn't the second requirement for an Outlook client to use an offline address book."
   - content: "What happens when you hide a user mailbox from address lists?"
     choices:
     - content: "The recipient is prevented from receiving email messages"
       isCorrect: false
-      explanation: "This answer is incorrect. This action isn't what happens when you hide a user mailbox from address lists. Try again."
+      explanation: "This answer is incorrect. This action isn't what happens when you hide a user mailbox from address lists."
     - content: "The recipient is hidden from all address lists but not the GAL"
       isCorrect: false
-      explanation: "This answer is incorrect. This action isn't what happens when you hide a user mailbox from address lists. Try again."
+      explanation: "This answer is incorrect. This action isn't what happens when you hide a user mailbox from address lists."
     - content: "The recipient is hidden from all address lists and the GAL"
       isCorrect: true
       explanation: "This answer is correct. Hiding the recipient from an address list doesn’t prevent the recipient from receiving email messages. Doing so only hides the recipient from all address lists and the GAL."
