FY22Q4 refresh - sharepoint-spfx-extensions
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/sharepoint-spfx-extensions/index.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-extensions/index.yml
@@ -3,7 +3,7 @@ uid: learn-m365.sharepoint-spfx-extensions
 metadata:
   title: Extend the SharePoint user interface with SharePoint Framework extensions
   description: Learn how to extend the SharePoint user interface with SharePoint Framework extensions.
-  ms.date: 09/13/2021
+  ms.date: 05/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
@@ -13,7 +13,7 @@ summary: This module will introduce you to extending the SharePoint user interfa
 abstract: |
   By the end of this module, you'll be able to:
   - Demonstrate how to create SPFx application customizer extensions
-  - Demonstrate how to create SPFx field customer extensions
+  - Demonstrate how to create SPFx field customizer extensions
   - Demonstrate how to create SPFx command set extensions
 prerequisites: |
   - Experience using SharePoint Online at the intermediate level
