--- a/learn-m365-pr/m365-developer/sharepoint-spfx-extensions/5-exercise-field-customizer.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-extensions/5-exercise-field-customizer.yml
@@ -3,7 +3,7 @@ uid: learn-m365.sharepoint-spfx-extensions.5-exercise-field-customizer
 metadata:
   title: Exercise - Create a field customizer extension
   description: In this exercise, you'll create a SharePoint Framework (SPFx) field customizer extension that will display a colored bar in a column with a percentage of the bar filled depending on the value in the field.
-  ms.date: 03/08/2022
+  ms.date: 05/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
@@ -25,7 +25,7 @@ quiz:
       explanation: "The `currentItem` property doesn't exist on the `context` object."
     - content: "The value of the current cell is passed into the `onRenderCell()` method."
       isCorrect: false
-      explanation: "The value isn't passed as an argument; its accessible from the `event` property passed into the `onRenderCell()` method."
+      explanation: "The value isn't passed as an argument; it's accessible from the `event` property passed into the `onRenderCell()` method."
   - content: "How is the HTML of a cell modified by a field customizer extension?"
     choices:
     - content: "The HTML is returned as a string by the `onRenderCell()` method."
