--- a/learn-m365-pr/m365-developer/sharepoint-spfx-graph-3rd-party-apis/5-exercise-azure-ad-apis.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-graph-3rd-party-apis/5-exercise-azure-ad-apis.yml
@@ -3,7 +3,7 @@ uid: learn-m365.sharepoint-spfx-graph-3rd-party-apis.5-exercise-azure-ad-apis
 metadata:
   title: Exercise - Call Azure AD secured REST APIs
   description: In this exercise, you'll create a new SharePoint Framework project with a single client-side web part that uses React and Microsoft Graph to display users in the currently logged in user's directory. You'll use the Azure AD HTTP client API included in the SharePoint Framework to authenticate and call the Microsoft Graph REST API.
-  ms.date: 03/07/2022
+  ms.date: 05/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
@@ -25,7 +25,7 @@ quiz:
       explanation: "Correct!"
     - content: "Use the browser's built in support for the Fetch API, obtain an access token from Azure AD, and include it in the `authorization` HTTP request header."
       isCorrect: false
-      explanation: "Use the `AadHttpClient` object included as part of the SharePoint Framework API. Its automatically configured to include the OAuth2 access token in the authorization header."
+      explanation: "Use the `AadHttpClient` object included as part of the SharePoint Framework API. It's automatically configured to include the OAuth2 access token in the authorization header."
   - content: "You must include an OAuth2 access token in an HTTP request to an Azure AD secured HTTP REST API. How do you obtain this access token?"
     choices:
     - content: "Once you've granted your SharePoint Online tenant permissions to the HTTP REST API, call the `this.context.aadHttpClientFactory.getClient('https://...')` method to receive an instance of the `AadHttpClient` object. This object is already configured to include the OAuth2 access token in the authorization HTTP request header. "
