--- a/learn-m365-pr/m365-developer/sharepoint-spfx-web-parts/5-exercise-test-workbench.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-web-parts/5-exercise-test-workbench.yml
@@ -2,8 +2,8 @@
 uid: learn-m365.sharepoint-spfx-web-parts.5-exercise-test-workbench
 metadata:
   title: Exercise - Testing with the hosted SharePoint Workbench
-  description: "In this exercise, you'll work with the two different versions of the SharePoint Workbench: the local & hosted workbench, as well as the different modes of the built-in gulp serve task."
-  ms.date: 03/07/2022
+  description: "In this exercise, you'll work with the two different versions of the SharePoint Workbench: the local & hosted workbench, and the different modes of the built-in gulp serve task."
+  ms.date: 05/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
