--- a/learn-m365-pr/m365-developer/sharepoint-spfx-web-parts/index.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-web-parts/index.yml
@@ -3,13 +3,13 @@ uid: learn-m365.sharepoint-spfx-web-parts
 metadata:
   title: Develop web parts with the SharePoint Framework
   description: Learn how to create client-side web parts with the SharePoint Framework.
-  ms.date: 03/07/2022
+  ms.date: 05/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Develop web parts with the SharePoint Framework
-summary: This module will introduce you to creating client-side web parts using the SharePoint Framework. You'll also see how to leverage the hosted SharePoint Workbench & using different parts of the SharePoint Framework API.
+summary: This module will introduce you to creating client-side web parts using the SharePoint Framework. You'll also see how to use the hosted SharePoint Workbench & using different parts of the SharePoint Framework API.
 abstract: |
   By the end of this module, you'll be able to:
   - Create a client-side web with the SharePoint Framework
