--- a/learn-m365-pr/m365/m365-optimize-wvd/1-introduction.yml
+++ b/learn-m365-pr/m365/m365-optimize-wvd/1-introduction.yml
@@ -3,8 +3,8 @@ uid: learn-m365.optimize-wvd.introduction
 title: Introduction
 metadata:
   title: Introduction
-  description: Learn how to customize Azure Virtual Desktop and use FSLogix, Microsoft 365, and Azure services.
-  ms.date: 01/10/2022
+  description: Learn how to customize Azure Virtual Desktop and use Microsoft 365, and Azure services.
+  ms.date: 05/02/2022
   author: lizap
   ms.author: nedelgad
   ms.topic: interactive-tutorial
