--- a/learn-m365-pr/wwl/manage-safe-attachments/2-create-policies-using-defender.yml
+++ b/learn-m365-pr/wwl/manage-safe-attachments/2-create-policies-using-defender.yml
@@ -1,16 +1,15 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.manage-safe-attachments.create-safe-attachment-policies-scc
-title: Create Safe Attachment policies using Microsoft 365 Defender
+title: Create Safe Attachment policies using Microsoft Defender for Office 365
 metadata:
-  title: Create Safe Attachment policies using Microsoft 365 Defender
-  description: "Create Safe Attachment policies using Microsoft 365 Defender"
-  ms.date: 09/15/2021
+  title: Create Safe Attachment policies using Microsoft Defender for Office 365
+  description: "Create Safe Attachment policies using Microsoft Defender for Office 365"
+  ms.date: 05/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
-sandbox: false
 labModal: false
 durationInMinutes: 6
 content: |
@@ -22,10 +21,10 @@ quiz:
     choices:
     - content: "Block"
       isCorrect: false
-      explanation: "That's incorrect. This option blocks current and future emails and attachments that have detected malware. These Messages aren't delivered to the user. Try again."
+      explanation: "Incorrect. This option blocks current and future emails and attachments that have detected malware. These Messages aren't delivered to the user."
     - content: "Dynamic delivery"
       isCorrect: false
-      explanation: "That's incorrect. This option immediately delivers the message body to the user, but it doesn't include the attachments. The attachments are reattached after scanning if they're found to be safe. Try again."
+      explanation: "Incorrect. This option immediately delivers the message body to the user, but it doesn't include the attachments. The attachments are reattached after scanning if they're found to be safe."
     - content: "Replace"
       isCorrect: true
-      explanation: "That's correct. This option removes an infected attachment and quarantines the message so that only an admin can review, release, or delete it."
+      explanation: "Correct. This option removes an infected attachment. It also quarantines the message so that only an admin can review, release, or delete it."
