--- a/learn-m365-pr/wwl/troubleshoot-exchange-online-configuration-issues/index.yml
+++ b/learn-m365-pr/wwl/troubleshoot-exchange-online-configuration-issues/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.troubleshoot-exchange-online-configuration-issues
 metadata:
   title: Troubleshoot Exchange Online configuration issues
   description: "Investigate and diagnose Exchange Online configuration issues including provisioning errors, recipient issues, address book membership, and public folder settings. MS-220"
-  ms.date: 04/08/2022
+  ms.date: 05/03/2022
   author: wwlpublish
   ms.author: dawnhopper
   ms.topic: interactive-tutorial
@@ -38,6 +38,7 @@ units:
 - learn.wwl.troubleshoot-exchange-online-configuration-issues.troubleshoot-address-lists-address-books
 - learn.wwl.troubleshoot-exchange-online-configuration-issues.investigate-organization-wide-settings
 - learn.wwl.troubleshoot-exchange-online-configuration-issues.troubleshoot-public-folder-issues
+- learn.wwl.troubleshoot-exchange-online-configuration-issues.troubleshoot-configuration-issues
 - learn.wwl.troubleshoot-exchange-online-configuration-issues.knowledge-check
 - learn.wwl.troubleshoot-exchange-online-configuration-issues.summary
 badge:
