--- a/learn-m365-pr/wwl/introduction-to-exchange-online-protection/4-explore-anti-spoofing-exchange-online-protection.yml
+++ b/learn-m365-pr/wwl/introduction-to-exchange-online-protection/4-explore-anti-spoofing-exchange-online-protection.yml
@@ -4,9 +4,11 @@ title: Explore anti-spoofing protection provided by Exchange Online Protection
 metadata:
   title: Explore anti-spoofing protection provided by Exchange Online Protection
   description: "Explore anti-spoofing protection provided by Exchange Online Protection"
-  ms.date: 05/02/2022
+  ms.date: 05/03/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 8
