changed files by pdets auto publish service, publishid[92a3f5e0-a0f3-4d0c-8100-1aa5582012c6] and do [publish].

--- a/learn-m365-pr/wwl/introduction-to-microsoft-defender-for-office-365/7-configure-outbound-spam-filtering-policies.yml
+++ b/learn-m365-pr/wwl/introduction-to-microsoft-defender-for-office-365/7-configure-outbound-spam-filtering-policies.yml
@@ -4,9 +4,11 @@ title: Configure outbound spam filtering policies
 metadata:
   title: Configure outbound spam filtering policies
   description: "Configure outbound spam filtering policies"
-  ms.date: 05/02/2022
+  ms.date: 05/03/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 8
