--- a/learn-m365-pr/wwl/introduction-to-microsoft-defender-for-office-365/8-unblock-users-from-sending-email.yml
+++ b/learn-m365-pr/wwl/introduction-to-microsoft-defender-for-office-365/8-unblock-users-from-sending-email.yml
@@ -4,9 +4,11 @@ title: Unblock users from sending email
 metadata:
   title: Unblock users from sending email
   description: "Unblock users from sending email"
-  ms.date: 05/02/2022
+  ms.date: 05/03/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 4
