--- a/learn-m365-pr/wwl/introduction-to-microsoft-defender-for-office-365/2-climb-security-ladder-eop-microsoft-defender-office-365.yml
+++ b/learn-m365-pr/wwl/introduction-to-microsoft-defender-for-office-365/2-climb-security-ladder-eop-microsoft-defender-office-365.yml
@@ -4,9 +4,11 @@ title: Climb the security ladder from EOP to Microsoft Defender for Office 365
 metadata:
   title: Climb the security ladder from EOP to Microsoft Defender for Office 365
   description: "Climb the security ladder from EOP to Microsoft Defender for Office 365"
-  ms.date: 05/02/2022
+  ms.date: 05/03/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 7
